--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BlueSky</title>
+    <title>ArrayMap</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/fontawesome.min.css" />
@@ -74,7 +74,7 @@
           <div class="carousel-item active">
             <img class="d-block w-100" src="imgs/slide1.jpg" alt="slider_img" />
             <div class="ovarlay_slide_cont">
-              <h2>We love working</h2>
+              <h2>We love おにぎり</h2>
               <h4>Maintenance service</h4>
               <p>
                 Contrary to popular belief, Lorem Ipsum is not simply random
