--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div class="carousel-item">
             <img class="d-block w-100" src="imgs/slide1.jpg" alt="slider_img" />
             <div class="ovarlay_slide_cont">
-              <h2>We love working</h2>
+              <h2>We love カレー</h2>
               <h4>Maintenance service</h4>
               <p>
                 Contrary to popular belief, Lorem Ipsum is not simply random
@@ -120,7 +120,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-5">
-            <h4>ABOUT BLUESKY</h4>
+            <h4>ABOUT ArrayMap</h4>
             <h3 style="text-transform: none !important">
               We Build for Your Comfort
             </h3>
