--- a/index.html
+++ b/index.html
@@ -55,16 +55,8 @@ session_start();
 									<span>Introduction</span>
 								</a>
 							</li>
-              <!--
 							<li>
-								<a href="#products" id="tmNavLink2" class="scrolly" data-bg-img="constructive_bg_02.jpg" data-page="#tm-section-2" data-page-type="carousel">
-									<i class="fas fa-map tm-nav-fa-icon"></i>
-									<span>Our Products</span>
-								</a>
-							</li>
-              -->
-							<li>
-								<a href="#company" class="scrolly" data-bg-img="constructive_bg_03.jpg" data-page="#tm-section-3">
+								<a href="#company" id="tmNavLink2" class="scrolly" data-bg-img="constructive_bg_03.jpg" data-page="#tm-section-3">
 									<i class="fas fa-users tm-nav-fa-icon"></i>
 									<span>Our Company</span>
 								</a>
@@ -73,6 +65,12 @@ session_start();
 								<a href="#contact" class="scrolly" data-bg-img="constructive_bg_04.jpg" data-page="#tm-section-4">
 									<i class="fas fa-comments tm-nav-fa-icon"></i>
 									<span>Contact Us</span>
+								</a>
+							</li>
+							<li>
+								<a href="#about" class="scrolly" data-bg-img="constructive_bg_01.jpg" data-page="#tm-section-5">
+                  <i class="fas fa-user tm-nav-fa-icon"></i>
+									<span>About Us</span>
 								</a>
 							</li>
 						</ul>
@@ -192,6 +190,15 @@ session_start();
 									</div>
 								</div>
 							</div>
+						</div>
+					</section>
+					<!-- section 4 -->
+					<section id="tm-section-5" class="tm-section">
+						<div class="ml-auto">
+							<header class="mb-4"><h1 class="tm-text-shadow">ArrayMap合同会社</h1></header>
+							<p class="mb-5 tm-font-big">代表社員　田中　拓也</p>
+							<p class="mb-5 tm-font-normal">メーカー系制御プログラマからWeb業界へ転身。<br>各種業務アプリ、セキュリティサイト、ITナレッジサイトなどの構築と運用を手がける。</p>
+							<!-- data-nav-link holds the ID of nav item, which means this link should behave the same as that nav item  -->
 						</div>
 					</section>
 				</div>	<!-- .tm-content -->
