--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ session_start();
 							<p class="mb-5 tm-font-big">代表社員　田中　拓也</p>
 							<p class="mb-5 tm-font-normal">メーカー系制御プログラマからWeb業界へ転身。<br>各種業務アプリ、セキュリティサイト、ITナレッジサイトなどの構築と運用を手がける。</p>
 							<p class="mb-5 tm-font-big">沿革</p>
-							<p class="mb-5 tm-font-normal">2020.11.20 設立,,,,</p>
+							<p class="mb-5 tm-font-normal">2020.11.20 設立,</p>
 							<!-- data-nav-link holds the ID of nav item, which means this link should behave the same as that nav item  -->
 						</div>
 					</section>
