--- a/section-7.html
+++ b/section-7.html
@@ -1,6 +1,6 @@
-<section id="tm-section-6" class="tm-section">
+<section id="tm-section-7" class="tm-section">
 	<div class="ml-auto">
-		<header class="mb-4"><h1 class="tm-text-shadow">Webシステム開発</h1></header>
+		<header class="mb-4"><h1 class="tm-text-shadow">ハードウェア関連システム開発</h1></header>
 		<p class="mb-5 tm-font-big">代表社員　田中　拓也</p>
 		<p class="mb-5 tm-font-normal">メーカー系制御プログラマからWeb業界へ転身。<br>フリーランスとして各種業務アプリ、セキュリティ関連サイト、ITナレッジサイトなどの構築と運用を手がける。</p>
 		<p class="mb-5 tm-font-big">S社様 賃貸物件検索システム</p>
