--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ include("util.php");
 					<section id="tm-section-1" class="tm-section">
 						<div class="ml-auto">
 							<header class="mb-4"><h1 class="tm-text-shadow">ArrayMap合同会社</h1></header>
-							<p class="mb-5 tm-font-big">インターネット上で、役立つシステムはまだまだあるはず。誰かを楽にするために、ゴールなきサービスを日々追求します。</p>
+							<p class="mb-5 tm-font-big">インターネット上で、役立つシステムはまだまだあるはず。まだ見ぬ誰かを楽にするために、ゴールなきサービスを日々追求します。</p>
 							<a href="#" class="btn tm-btn tm-font-big" data-nav-link="#tmNavLink2">Continue...</a>
 							<!-- data-nav-link holds the ID of nav item, which means this link should behave the same as that nav item  -->
 						</div>
@@ -117,7 +117,7 @@ include("util.php");
 						<div class="row">
 							<div class="col-sm-12 col-md-6 col-lg-12 col-xl-6 mb-4">
 								<div class="media tm-bg-transparent-black tm-border-white">
-									<i class="fas fa-code tm-icon-circled tm-icon-media tm-sub-nav" data-nav-link="#tmNavLink2" data-page="#tm-section-6"></i>
+									<i class="fas fa-code tm-icon-circled tm-icon-media tm-sub-nav" data-nav-link="#tmNavLink2" data-page="#tm-section-6" data-bg-img="bg_05.jpg"></i>
 									<div class="media-body">
 										<h3>Webシステム開発</h3>
 										<p>PHP, nodejs, Vue, MySQL ...技術は問いません。<br>全ては誰かを楽にするため、楽しませるため。</p>
@@ -126,7 +126,7 @@ include("util.php");
 							</div>
 							<div class="col-sm-12 col-md-6 col-lg-12 col-xl-6 mb-4">
 								<div class="media tm-bg-transparent-black tm-border-white">
-									<i class="fas fa-camera fa-sm tm-icon-circled tm-icon-media tm-sub-nav" data-nav-link="#tmNavLink2" data-page="#tm-section-7"></i>
+									<i class="fas fa-camera fa-sm tm-icon-circled tm-icon-media tm-sub-nav" data-nav-link="#tmNavLink2" data-page="#tm-section-7" data-bg-img="bg_05.jpg"></i>
                   <!--
 									     <i class="fas fa-map-pin mr-4 tm-icon-circled tm-icon-media"></i>
                   -->
@@ -138,7 +138,7 @@ include("util.php");
 							</div>
 							<div class="col-sm-12 col-md-6 col-lg-12 col-xl-6 mb-4">
 								<div class="media tm-bg-transparent-black tm-border-white">
-									<i class="fas fa-mobile-alt mr-4 tm-icon-circled tm-icon-media tm-sub-nav" data-nav-link="#tmNavLink2" data-page="#tm-section-8"></i>
+									<i class="fas fa-mobile-alt mr-4 tm-icon-circled tm-icon-media tm-sub-nav" data-nav-link="#tmNavLink2" data-page="#tm-section-8" data-bg-img="bg_05.jpg"></i>
 									<div class="media-body">
 										<h3>モバイルアプリ開発<br>デスクトップアプリ開発</h3>
 										<p>主にAndroid, Electronを扱います。</p>
@@ -147,7 +147,7 @@ include("util.php");
 							</div>
 							<div class="col-sm-12 col-md-6 col-lg-12 col-xl-6 mb-4">
 								<div class="media tm-bg-transparent-black tm-border-white">
-                  <i class="fas fa-wrench mr-4 tm-icon-circled tm-icon-media tm-sub-nav" data-nav-link="#tmNavLink2" data-page="#tm-section-9"></i>
+                  <i class="fas fa-wrench mr-4 tm-icon-circled tm-icon-media tm-sub-nav" data-nav-link="#tmNavLink2" data-page="#tm-section-9" data-bg-img="bg_05.jpg"></i>
 									<div class="media-body">
 										<h3>その他</h3>
 										<p>小規模で小回りの利く開発、請け負います。</p>
