--- a/section-9.html
+++ b/section-9.html
@@ -1,13 +1,8 @@
 <section id="tm-section-9" class="tm-section">
 	<div class="ml-auto">
 		<header class="mb-4"><h1 class="tm-text-shadow">その他</h1></header>
-		<p class="mb-5 tm-font-big">代表社員　田中　拓也</p>
-		<p class="mb-5 tm-font-normal">メーカー系制御プログラマからWeb業界へ転身。<br>フリーランスとして各種業務アプリ、セキュリティ関連サイト、ITナレッジサイトなどの構築と運用を手がける。</p>
-		<p class="mb-5 tm-font-big">S社様 賃貸物件検索システム</p>
-		<p class="mb-5 tm-font-big">S社様 賃貸物件検索システム</p>
-		<p class="mb-5 tm-font-big">S社様 賃貸物件検索システム</p>
-		<p class="mb-5 tm-font-big">S社様 賃貸物件検索システム</p>
-<!--		<p class="mb-5 tm-font-normal">2005.02.01 個人事業開始</p>-->
-	<!-- data-nav-link holds the ID of nav item, which means this link should behave the same as that nav item  -->
+		<p class="mb-5 tm-font-big">レガシーシステムの改善</p>
+		<p class="mb-5 tm-font-normal">Dockerを用いた開発環境のポータブル化</p>
+		<p class="mb-5 tm-font-normal">テストのない環境からテストのできる環境</p>
 	</div>
 </section>
