表示項目をphp arrayに持つ

--- a/section-7.html
+++ b/section-7.html
@@ -1,13 +1,21 @@
+<?php
+$items=[
+    [
+        "title"=>"S社様 賃貸物件検索システム",
+        "description"=>"専用端末とQRコードを用いたゲーム機設置管理システム。",
+    ],
+    [
+        "title"=>"S1社様 ゲーム機管理システム",
+        "description"=>"専用端末とQRコードを用いたゲーム機設置管理システム。",
+    ],
+];
+?>
 <section id="tm-section-7" class="tm-section">
-	<div class="ml-auto">
-		<header class="mb-4"><h1 class="tm-text-shadow">ハードウェア関連システム開発</h1></header>
-		<p class="mb-5 tm-font-big">代表社員　田中　拓也</p>
-		<p class="mb-5 tm-font-normal">メーカー系制御プログラマからWeb業界へ転身。<br>フリーランスとして各種業務アプリ、セキュリティ関連サイト、ITナレッジサイトなどの構築と運用を手がける。</p>
-		<p class="mb-5 tm-font-big">S社様 賃貸物件検索システム</p>
-		<p class="mb-5 tm-font-big">S社様 賃貸物件検索システム</p>
-		<p class="mb-5 tm-font-big">S社様 賃貸物件検索システム</p>
-		<p class="mb-5 tm-font-big">S社様 賃貸物件検索システム</p>
-<!--		<p class="mb-5 tm-font-normal">2005.02.01 個人事業開始</p>-->
-	<!-- data-nav-link holds the ID of nav item, which means this link should behave the same as that nav item  -->
+  <div class="ml-auto">
+    <header class="mb-4"><h1 class="tm-text-shadow">ハードウェア関連システム開発</h1></header>
+    <?php foreach($items as $item):?>
+      <p class="mb-5 tm-font-big"><?=$item["title"]?></p>
+      <p class="mb-5 tm-font-normal"><?=$item["description"]?></p>
+    <?php endforeach;?>
 	</div>
 </section>
