--- a/section-7.html
+++ b/section-7.html
@@ -1,18 +1,23 @@
 <?php
 $items=[
     [
-        "title"=>"S社様 賃貸物件検索システム",
-        "description"=>"専用端末とQRコードを用いたゲーム機設置管理システム。",
+        "title"=>"電光掲示板管理システム",
+        "description"=>"RaspberryPiを用いた電光掲示板管理システム",
     ],
     [
-        "title"=>"S1社様 ゲーム機管理システム",
-        "description"=>"専用端末とQRコードを用いたゲーム機設置管理システム。",
+        "title"=>"T社様　バッテリー管理システム",
+        "description"=>"LinuxマイクロアプライアンスサーバMA-E350を用いて、大容量バッテリーの充放電を管理するシステム",
+    ],
+    [
+        "title"=>"混雑監視システム",
+        "description"=>"RaspberryPiと小型カメラを使用して、、プライバシーに配慮して混雑状況を監視するシステム",
     ],
 ];
 ?>
 <section id="tm-section-7" class="tm-section">
   <div class="ml-auto">
     <header class="mb-4"><h1 class="tm-text-shadow">ハードウェア関連システム開発</h1></header>
+    <p class="mb-5 tm-font-normal">RaspberryPi/Arduino等を用いたシステム開発。サンプル作成からお手伝いいたします。</p>
     <?php foreach($items as $item):?>
       <p class="mb-5 tm-font-big"><?=$item["title"]?></p>
       <p class="mb-5 tm-font-normal"><?=$item["description"]?></p>
