--- a/section-8.html
+++ b/section-8.html
@@ -2,17 +2,17 @@
 $items=[
     [
         "title"=>"C社様 ゲーム機管理システム",
-        "description"=>"専用端末とQRコードを用いたゲーム機設置管理システム。",
+        "description"=>"Android専用端末とQRコードを用いたゲーム機設置/廃棄管理システム。",
     ],
     [
-        "title"=>"X社様 ゲーム機管理システム",
-        "description"=>"専用端末とQRコードを用いたゲーム機設置管理システム。",
+        "title"=>"I社様 冷蔵庫内容物　鮮度管理および購買促進システム",
+        "description"=>"冷蔵庫内の商品の鮮度管理を行い、消費期限切れの警告、同一商品の購入時期の通知を行うAndroidアプリ。",
     ],
 ];
 ?>
 <section id="tm-section-8" class="tm-section">
   <div class="ml-auto">
-    <header class="mb-4"><h1 class="tm-text-shadow">モバイルアプリ開発<br>デスクトップアプリ開発</h1></header>
+    <header class="mb-4"><h1 class="tm-text-shadow">モバイルアプリ開発</h1></header>
     <?php foreach($items as $item):?>
       <p class="mb-5 tm-font-big"><?=$item["title"]?></p>
       <p class="mb-5 tm-font-normal"><?=$item["description"]?></p>
