--- a/section-9.html
+++ b/section-9.html
@@ -9,6 +9,7 @@ $items=[
 <section id="tm-section-9" class="tm-section">
 	<div class="ml-auto">
 		<header class="mb-4"><h1 class="tm-text-shadow">その他</h1></header>
+    <p class="mb-5 tm-font-normal">開発の支援作業なども得意としています。</p>
     <?php foreach($items as $item):?>
       <p class="mb-5 tm-font-big"><?=$item["title"]?></p>
       <p class="mb-5 tm-font-normal"><?=$item["description"]?></p>
