--- a/section-6.html
+++ b/section-6.html
@@ -4,6 +4,22 @@ $items=[
         "title"=>"S社様 賃貸物件検索システム",
         "description"=>"専用端末とQRコードを用いたゲーム機設置管理システム。",
     ],
+    [
+        "title"=>'<a href="http://www.aguse.jp">www.aguse.jp</a>',
+        "description"=>"Webサイトのセキュリティ情報を調査するサイト。",
+    ],
+    [
+        "title"=>"S社様 賃貸物件検索システム",
+        "description"=>"専用端末とQRコードを用いたゲーム機設置管理システム。",
+    ],
+    [
+        "title"=>"C社様 飲食店向けサービス・情報比較メディア",
+        "description"=>"飲食店向けのサービスを「無料」で比較・検討し資料請求できるサービス。",
+    ],
+    [
+        "title"=>"I社様 働き方メディア",
+        "description"=>"多様な働き方のサイト「新しい働き方」が注目を集めています。パラレルキャリア・リモートワークなどの実態に触れるメディア。",
+    ],
 ];
 ?>
 <section id="tm-section-6" class="tm-section">
@@ -13,5 +29,6 @@ $items=[
       <p class="mb-5 tm-font-big"><?=$item["title"]?></p>
       <p class="mb-5 tm-font-normal"><?=$item["description"]?></p>
     <?php endforeach;?>
+    <hr><p class="mb-5 tm-font-normal">その他多数のメディアサイトおよび業務用サイトの開発、運用サポートを行っております。</p>
 	</div>
 </section>
