--- a/section-7.html
+++ b/section-7.html
@@ -22,5 +22,8 @@ $items=[
       <p class="mb-5 tm-font-big"><?=$item["title"]?></p>
       <p class="mb-5 tm-font-normal"><?=$item["description"]?></p>
     <?php endforeach;?>
+		<header class="mb-4"><h1 class="tm-text-shadow">技術的バックグラウンド</h1></header>
+    <p class="mb-5 tm-font-big">デバイス制御</p>
+    <p class="mb-5 tm-font-normal">Java</p>
 	</div>
 </section>
