--- a/section-7.html
+++ b/section-7.html
@@ -24,6 +24,6 @@ $items=[
     <?php endforeach;?>
 		<header class="mb-4"><h1 class="tm-text-shadow">技術的バックグラウンド</h1></header>
     <p class="mb-5 tm-font-big">デバイス制御</p>
-    <p class="mb-5 tm-font-normal">Java</p>
+    <p class="mb-5 tm-font-normal">C, Java</p>
 	</div>
 </section>
