--- a/section-6.html
+++ b/section-6.html
@@ -37,6 +37,6 @@ $items=[
     <p class="mb-5 tm-font-normal">フロントエンド: Vue.js, React</p>
     <p class="mb-5 tm-font-normal">フレームワーク：CakePHP, Laravel, Express</p>
     <p class="mb-5 tm-font-big">周辺技術</p>
-    <p class="mb-5 tm-font-normal">Docker, MySQL, Linux管理一般</p>
+    <p class="mb-5 tm-font-normal">Docker, MySQL, mongodb, Linux管理一般</p>
 	</div>
 </section>
